Updated margins on fixture list for better spacing

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -86,8 +86,13 @@ html {
 
 /* Fixtures Page styling */
 
+.fixture-list {
+    margin: auto;
+}
+
 .edit-button {
     margin-left: auto;
+    font-size: 1em;
 }
 
 /* Register Page styling */
